# ApplyWise

./: .dockerignore  .env.production.example  .gitignore  Dockerfile.render-free  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  render.yaml
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  constraints.txt  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260705_0001_initial_models.py  20260705_0002_profile_builder_fields.py  20260706_0003_resume_chunks.py  20260706_0004_github_repository_analysis.py  20260706_0005_job_post_analysis.py  20260706_0006_learning_roadmap_links.py  20260706_0007_application_tracker_fields.py  20260713_0008_embedding_provenance.py  20260713_0009_resume_versions.py  20260713_0010_company_profiles.py  20260713_0011_skill_graph.py  20260713_0012_events_and_goals.py
api/src/applywise/: __init__.py  application_coach.py  auth.py  cloudflare_ai.py  (+25 more)
api/tests/: test_application_coach.py  test_applications.py  test_auth.py  test_cloudflare_ai.py  test_company_profiles.py  test_database.py  test_embedding_tasks.py  test_embeddings.py  test_fit_score.py  test_github_analyzer.py  test_github_routes.py  test_goals.py  test_hardening_fixtures.py  test_health.py  test_interview_prep.py  test_job_analyzer.py  test_job_ingestion.py  test_jobs_routes.py  test_middleware.py  test_models.py  test_onboarding.py  test_postgres_integration.py  test_profile.py  test_rate_limit.py  test_resume_parser.py  test_resume_routes.py  test_roadmap.py  test_settings.py  test_skill_graph.py  test_validation.py  test_worker.py
(+104 files in other folders)
